--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
                 <div class="header_02">New Projects</div> 
                 
                 <div class="news_section">
-                  <div class="news_image"><a href="https://scratch.mit.edu/projects/119669996/"><img src="images/templatemo_image_03.jpg" alt="image 3" /></a></div>
+                  <div class="news_image"><a href="files/dataproject.zip"><img src="images/templatemo_image_03.jpg" alt="image 3" /></a></div>
                 <div class="news_content">
-                      <div class="news_title">The Spanish Game</div>
-                        <p>A fun educational game that anyone can play so have fun and enjoy. 
-					<br /><a href="https://docs.google.com/spreadsheets/d/1CGhB-4PdKW8SLQUNBy4p0YiZCTcPanYG_LQ-imQmwK8/edit?usp=sharing">BackLog Here</a></p>
+                      <div class="news_title">Data Project</div>
+                        <p>This is my data project where you had to make a design breif and used online data to make a visualization answering the problem statement. You can get ther files 
+					<br /><a href="files/dataproject.zip"> Here</a></p>
                   </div>
               </div>
                 
