--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                 <div class="margin_bottom_20"></div>
                 
                 <div class="news_section">
-                    <div class="news_image"><a href="https://repl.it/DcPd/13"><img src="images/templatemo_image_04.jpg" alt="image 4" /></a></div>
+                    <div class="news_image"><a href="files/MachiavelliPrinceSim"><img src="images/templatemo_image_04.png" alt="image 4" /></a></div>
     <div class="news_content">
-                      <div class="news_title">Scottsboro Trail</div>
-                        <p>This is a short decision story where you call the shots on what happens in the trial. This was made with repl.it Python so try not to mess with the code.
-				<br /><a href="https://docs.google.com/document/d/1UeUj-BWJDW7_ndIBwEa4udFbuhvnYRTmphyeQnZq-uM/edit?usp=sharing">FlowChart Here</a></p>
+                      <div class="news_title">Machiavelli Prince Simulation</div>
+                        <p>This is a simulation on a Princes traits according to Machiavelli that show if the people rebel or don't rebel against you. You can Download our simulation
+				<br /><a href="files/MachiavelliPrinceSim.zip">Here</a></p>
                   </div>
                 </div>
                 
